--- a/W1D2/style.css
+++ b/W1D2/style.css
@@ -59,10 +59,12 @@ body {
 .input1 {
     width: 200px;
     height: 30px;
+    margin-top: 10px;
 }
 .input2 {
     width: 412px;
     height: 30px;
+     margin-top: 10px;
 }
 
 .buttons {
