--- a/W1D5/style.css
+++ b/W1D5/style.css
@@ -18,12 +18,23 @@
     border: 1px solid rgb(225, 224, 224);
     background-color: rgba(245, 241, 241, 0.738);
     height: 100px;
+    width: 1000px;
+}
+
+.footer_page2 {
+    grid-area: footer;
+    border: 1px solid rgb(225, 224, 224);
+    background-color: rgba(245, 241, 241, 0.738);
+    height: 80px;
+    width: 1000px;
+    margin-left: 30px;
 }
 
 .footer_1 {
     margin-top:30px;
     color: rgb(146, 145, 145);
    font-family: "Helvetica Neue",Helvetica,Arial;
+   text-align: center;
 }
 
 .main {
@@ -90,7 +101,8 @@ img {
 }
 
 #footer_link {
-    color:rgb(111, 158, 238)
+    color:rgb(111, 158, 238);
+     font-family: "Helvetica Neue",Helvetica,Arial;
 }
 
 .content_title {
@@ -156,6 +168,127 @@ img {
     border: 4px solid #ccc;
 }
 
+#blog_date {
+        font-size: 13px;
+     font-family: "Helvetica Neue",Helvetica,Arial;
+     color: rgb(153, 151, 151);
+}
+
 .content_2:hover {
     border: 4px solid #ccc;
+}
+
+.content_left {
+    width: 680px;
+    float: left;
+    /* border: 1px solid #ccc; */
+
+}
+
+.content_right {
+    width: 300px;
+    float: right;
+    /* border: 1px solid #ccc; */
+}
+
+.content_page2 {
+    float: left;
+    margin-left: 15px;
+}
+
+.blog_content {
+    text-align: left;
+    margin-top: -7px;
+}
+
+.right_box_up {
+    background-color: rgb(245, 242, 242);
+
+    height: 125px;
+
+ 
+}
+.right_title {
+    text-align: left;
+    margin-left: 10px;
+    text-decoration: bold;
+    font-size: 18px;
+    font-style:italic;
+    font-weight: bold;
+    
+
+}
+
+.right_content {
+    font-size: 13px;
+     font-family: "Helvetica Neue",Helvetica,Arial;
+     text-align: left;
+      margin-left: 9px;
+      margin-top: 8px;
+      color:rgb(75, 73, 73)
+     
+}
+
+.right_box_down {
+    margin-top: 20px;
+    text-align: left;
+}
+
+#content_link {
+    color:rgb(111, 158, 238);
+     font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+     margin-left: 9px;
+}
+
+#blog_link {
+    color:rgb(111, 158, 238);
+     font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+
+}
+
+.blog_title {
+    text-align: left;
+    font-size: 30px;
+  
+}
+
+.blog_content {
+     color:rgb(75, 73, 73);
+      font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+}
+
+.blog_title_sub {
+    text-align: left;
+    font-size: 22px;
+    font-family: 'Courier New', Courier, monospace;
+  
+}
+
+.blog_content_sub {
+    text-align: left;
+     color:rgb(75, 73, 73);
+      font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+     margin-top: -10px;
+}
+
+.content_btn_o {
+    background-color: transparent;
+    border-radius: 30px;
+       font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+     color:rgb(111, 158, 238);
+border: 1px solid rgb(111, 158, 238);
+}
+
+.content_btn_n {
+    background-color: transparent;
+    border-radius: 30px;
+       font-family: "Helvetica Neue",Helvetica,Arial;
+     font-size: 13px;
+     color:rgb(193, 193, 194);
+border: 1px solid rgb(193, 193, 194);
 }
