--- a/W1D5/style.css
+++ b/W1D5/style.css
@@ -27,7 +27,9 @@
     background-color: rgba(245, 241, 241, 0.738);
     height: 80px;
     width: 1000px;
-    margin-left: 30px;
+     margin-left: auto;
+
+   
 }
 
 .footer_1 {
